--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@ body {
   background-color: rgb(240, 253, 244);
 }
 
-.swiper-button-next:after .swiper-button-prev:after {
+.swiper-button-next:after,
+.swiper-button-prev:after {
   color: #a8dadc;
 }
 
